# final-applied-AI-project

./: .gitignore  README.md  eval_harness.py  idea.md  model_card.md  plan.MD  pyproject.toml  requirements.txt
.github/agents/: documentation.agent.md  tests.agent.md
data/: knowledge_base.json  songs.csv
docs/: idea.md  implementation_guide.md  model_card.md  reflection.md
src/: __init__.py  cli.py  knowledge.py  main.py  orchestrator.py  recommender.py  retrieval.py
src/agents/: __init__.py  agent1_mood.py  agent2_profile.py  agent3.py  agent3_setlist.py  agent4_narrator.py  connectivity_check.py
tests/: test_agent1_mood.py  test_agent2_profile.py  test_agent3_setlist.py  test_agent4_narrator.py  test_connectivity_smoke.py  test_orchestrator.py  test_pipeline_smoke.py  test_retrieval.py
