[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai110-module3show-musicrecommendersimulation"
version = "0.1.0"
description = "Music recommender simulation with emerging multi-agent pipeline components."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "pytest",
]

[project.scripts]
dj-recommender = "src.main:main"
dj-recommender-cli = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
markers = [
    "smoke: tests that hit real external services",
]
